# CodeKataTemplates

bash/: histogram_size  histogram_size.bats
cpp/: CMakeLists.txt
cpp/test/: CMakeLists.txt  CodeKataTest.cpp
