set(DOCTEST_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/doctest/include)
add_library(doctest::doctest INTERFACE IMPORTED)
target_include_directories(doctest::doctest INTERFACE "${DOCTEST_INCLUDE_DIR}")

add_executable(CodeKataTest TestMain.cpp CodeKataTest.cpp)
target_include_directories(CodeKataTest PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_include_directories(CodeKataTest PRIVATE $<TARGET_PROPERTY:CodeKata,INCLUDE_DIRECTORIES>)
target_link_libraries(CodeKataTest PRIVATE CodeKata)
target_link_libraries(CodeKataTest PRIVATE doctest::doctest)
add_test(NAME CodeKataTest COMMAND CodeKataTest)
